--- a/config.yml
+++ b/config.yml
@@ -44,7 +44,7 @@
 
 # What is your status page called?
 # Shows up in the browser bar and meta tags
-title: Eggsample App Status
+title: OC Radio Live Status
 
 # What language is this site using?
 # Only alters the html[lang] attribute
